infrastructure/microk8s/obfuscated-louis-racette-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress-louis-racette
  namespace: resume
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts: 
    - louisracette.com
    - www.louisracette.com
    secretName: mySecretName
  rules:    
    - host: louisracette.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-svc
                port:
                  number: 8080
    - host: www.louisracette.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resume-svc
                port:
                  number: 8080
